--- a/JApp/app/views/layouts/application.html.erb
+++ b/JApp/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if signed_in? %>
+  Welcome <%= current_user.username %>
+  <%= button_to 'Log out', session_url, method: :delete %>
+  -----------------------
+<% else %>
+<%= button_to 'Sign in', new_session_url, method: :get %>
+<%= button_to 'Sign up', new_user_url, method: :get %>
+<% end %>
 
 <%= yield %>
 
